@@ -596,6 +596,20 @@
       </Help>
     </Function>
 
+	<Function>
+      <Name>ISOWEEKNUM</Name>
+      <Type>Int</Type>
+	  <Parameter>
+		<Comment>Date</Comment>
+		<Type>String</Type>
+      </Parameter>
+      <Help>
+		<Text>The ISOWEEKNUM() function returns number of the week which the date falls into. Note that this function is compliant with the ISO8601 standard: a week always begins on a Monday, and ends on a Sunday. The first week of a year is that week which contains the first Thursday of the year.</Text>
+		<Syntax>ISOWEEKNUM(date)</Syntax>
+		<Example>ISOWEEKNUM(blah) returns foo</Example>
+      </Help>
+    </Function>
+
   </Group>
 
 </KSpreadFunctions>
