@@ -26,9 +26,10 @@ since 1.2 relase ( 'til 1.3 beta 1 :-)
 
 New functions:
 
-Date/Time (15):
+Date/Time (16):
 - EDATE, EOMONTH, DAYS360, WEEKDAY, TIMEVALUE, DATEVALUE, YEAR,
-  MONTH, DAY, HOUR, MINUTE, SECOND, DAYNAME, MONTHNAME, EASTERSUNDAY
+  MONTH, DAY, HOUR, MINUTE, SECOND, DAYNAME, MONTHNAME, EASTERSUNDAY,
+  ISOWEEKNUM
 
 Math (16):
 - SUBTOTAL, POWER, TRUNC, CEILING, PRODUCT (now Excel compatible), 
